[package]
name = "deeprl"
version = "0.5.0"
edition = "2021"
description = "DeepL client library with all the things (blocking)"
license = "MIT"
documentation = "https://docs.rs/deeprl"
readme = "README.md"
repository = "https://github.com/ValuedMammal/deeprl"

[dependencies]
paste = "1.0.13"
reqwest = { version = "0.12.24", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
tempfile = "3.12.0"
